--- a/superheroes.html
+++ b/superheroes.html
@@ -10,10 +10,15 @@
     <main></main>
     <template>
         <article class="superhero">
-            <h1></h1>
-            <h2>also known as</h2>
-            <h3>powers</h3>
+            
+            <p class="alias">also known as</p>
+            <img src="" alt="" class="profilePic">
+            <p class="fullName">name <span></span></p>
+            <p class="birthday">birthday</p>
+            <p class="location">location</p>
+            <p class="powers">powers:</p>
             <ul></ul>
+            <p class="colors">favorite colors</p>
             <button class="removeIt">Delete</button>
         </article>
     </template>
